# cli-sdk-go

./: BUILD.bazel  README.md  WORKSPACE  nogo_config.json
hooks/: license_header
pkg/config/: BUILD.bazel  config.go
pkg/plugin/: BUILD.bazel  grpc.go  interface.go
pkg/plugin/mock/: BUILD.bazel  doc.go
pkg/proto/: BUILD.bazel  dummy.go  plugin.proto
