load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "TOOLS_NOGO", "nogo")

nogo(
    name = "nogo",
    config = "nogo_config.json",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)

# gazelle:prefix aspect.build/cli-sdk-go
# gazelle:go_naming_convention import
# gazelle:go_naming_convention_external import
# gazelle:resolve go github.com/bazelbuild/bazel/src/main/protobuf/command_line @build_aspect_cli//third-party/github.com/bazelbuild/bazel/src/main/protobuf/command_line
# gazelle:resolve go github.com/bazelbuild/bazel/src/main/protobuf/command_line @build_aspect_cli//third-party/github.com/bazelbuild/bazel/src/main/protobuf/command_line
gazelle(name = "gazelle")

gazelle(
    name = "update_go_deps",
    args = [
        "-from_file=go.mod",
        "-to_macro=go.bzl%deps",
        "-prune",
    ],
    command = "update-repos",
)
