load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "aspect.build/cli-sdk-go/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/plugin",
        "@com_github_hashicorp_go_plugin//:go-plugin",
    ],
)
