load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "plugin",
    srcs = [
        "grpc.go",
        "interface.go",
    ],
    importpath = "aspect.build/cli-sdk-go/pkg/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto",
        "@build_aspect_cli//bazel/buildeventstream/proto",
        "@build_aspect_cli//pkg/bazel",
        "@build_aspect_cli//pkg/interceptors",
        "@build_aspect_cli//pkg/ioutils",
        "@com_github_hashicorp_go_plugin//:go-plugin",
        "@com_github_manifoldco_promptui//:promptui",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
