load("@bazel_gomock//:gomock.bzl", "gomock")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:exclude mock_plugin_test.go

gomock(
    name = "mock_plugin_source",
    out = "mock_plugin_test.go",
    interfaces = ["Plugin"],
    library = "//pkg/plugin",
    package = "mock",
    visibility = ["//visibility:private"],
)

go_library(
    name = "mock",
    srcs = [
        "doc.go",
        ":mock_plugin_source",  # keep
    ],
    importpath = "aspect.build/cli-sdk-go/pkg/plugin/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/plugin",  # keep
        "@build_aspect_cli//bazel/buildeventstream/proto",  # keep
        "@build_aspect_cli//pkg/ioutils",  # keep
        "@com_github_golang_mock//gomock",  # keep
    ],
)
